<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Bold"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="22dp"
            android:src="@drawable/ic_menu" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/actionBar"
        android:background="@color/divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="64dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="250dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/earphone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="24dp">

                    <TextView
                        android:id="@+id/selectedAction"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:lines="2"
                        android:text="@string/next_previous"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textColor="@color/text_black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/text_black" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.9" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/disabled" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:lines="2"
                        android:text="@string/play_pause"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textColor="@color/disabled"
                        android:textSize="11sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/select_action"
                android:textAppearance="@style/TextAppearance.Bold"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actionRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/details"
                android:textAppearance="@style/TextAppearance.Bold"
                android:textColor="@color/text_caption"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/actionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/next_previous"
                android:textColor="@color/text_normal"
                android:textSize="13sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>